[workspace]
members = [
    "atext2html",
    "parse-hyperlinks",
    "parse-hyperlinks-extras",
]
resolver = "2"

[workspace.package]
authors = ["Jens Getreu <getreu@web.de>"]
edition = "2021"
keywords = ["parser", "markup", "hyperlink", "Markdown", "reStructuredText"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/getreu/parse-hyperlinks"
homepage = "https://gitlab.com/getreu/parse-hyperlinks"
version = "0.26.1"
