[package]
name = "atext2html"
version = "0.19.6"
authors = ["Jens Getreu <getreu@getreu@web.de>"]
edition = "2018"

keywords = ["parser", "markup", "hyperlink", "markdown", "restructuredtext"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/getreu/parse-hyperlinks"
homepage = "https://gitlab.com/getreu/parse-hyperlinks"
description = "A Nom parser library for hyperlinks with markup."
categories = ["command-line-utilities", "parser-implementations"]

[dependencies]
# parse-hyperlinks = { path = "../parse-hyperlinks" }
parse-hyperlinks = "0.19.6"
structopt = "0.3.21"
lazy_static = "1.4.0"
