[package]
name = "atext2html"
version = "0.22.1"
authors = ["Jens Getreu <getreu@getreu@web.de>"]
edition = "2018"

keywords = ["parser", "markup", "hyperlink", "Markdown", "reStructuredText"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/getreu/parse-hyperlinks"
homepage = "https://gitlab.com/getreu/parse-hyperlinks"
description = "A Nom parser library for hyperlinks with markup."
categories = ["command-line-utilities", "parser-implementations"]

[dependencies]
#parse-hyperlinks = { path = "../parse-hyperlinks" }
parse-hyperlinks = "0.22.1"
structopt = "0.3.22"
lazy_static = "1.4.0"
