[package]
name = "atext2html"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
categories = ["command-line-utilities", "parser-implementations"]
description = "Convert a text with markup hyperlinks to HTML"

[dependencies]
#parse-hyperlinks = { path = "../parse-hyperlinks" }
parse-hyperlinks = "0.28.2"
structopt = "0.3.26"
lazy_static = "1.5.0"
