[package]
name = "parse-hyperlinks-extras"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
description = "Extra parser for a Nom parser library for hyperlinks with markup."
categories = ["parser-implementations"]

[dependencies]
nom= "7.1.1"
html-escape = "0.2.11"
percent-encoding = "2.1.0"
thiserror = "1.0.31"
#parse-hyperlinks = { path = "../parse-hyperlinks" }
parse-hyperlinks = "0.23.4"
