[package]
name = "parse-hyperlinks-extras"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
description = "Extra parser for a Nom parser library for hyperlinks with markup."
categories = ["parser-implementations"]

[dependencies]
nom= "7.1.3"
html-escape = "0.2.13"
percent-encoding = "2.3.0"
thiserror = "1.0.49"
#parse-hyperlinks = { path = "../parse-hyperlinks" }
parse-hyperlinks = "0.24.0"
