[package]
name = "parse-hyperlinks-extras"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
description = "Extra parser for a Nom parser library for hyperlinks with markup."
categories = ["parser-implementations"]

[dependencies]
nom= "8"
html-escape = "0.2.13"
percent-encoding = "2.3.1"
thiserror = "2.0.12"
#parse-hyperlinks = { path = "../parse-hyperlinks" }
parse-hyperlinks = "0.29.0"
