[package]
name = "parse-hyperlinks-html"
version = "0.23.0"
authors = ["Jens Getreu <getreu@getreu@web.de>"]
edition = "2018"
keywords = ["parser", "markup", "hyperlink", "Markdown", "reStructuredText"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/getreu/parse-hyperlinks"
homepage = "https://gitlab.com/getreu/parse-hyperlinks"
description = "A Nom parser library for hyperlinks with markup."
categories = ["command-line-utilities", "parser-implementations"]

[dependencies]
nom= "7.0.0"
html-escape = "0.2.9"
percent-encoding = "2.1.0"
thiserror = "1.0.26"
#parse-hyperlinks = { path = "../parse-hyperlinks" }
parse-hyperlinks = "0.23.0"
