[package]
name = "parse-hyperlinks"
version = "0.20.0"
authors = ["Jens Getreu <getreu@getreu@web.de>"]
edition = "2018"
keywords = ["parser", "markup", "hyperlink", "markdown", "restructuredtext"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/getreu/parse-hyperlinks"
homepage = "https://gitlab.com/getreu/parse-hyperlinks"
description = "A Nom parser library for hyperlinks with markup."
categories = ["command-line-utilities", "parser-implementations"]

[dependencies]
nom= "6.1.2"
html-escape = "0.2.7"
percent-encoding = "2.1.0"
thiserror = "1.0.24"
