[package]
name = "parse-hyperlinks"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
description = "A Nom parser library for hyperlinks with markup."
categories = ["parser-implementations"]

[dependencies]
nom= "7.1.1"
html-escape = "0.2.11"
percent-encoding = "2.1.0"
thiserror = "1.0.31"
