[package]
name = "parse-hyperlinks"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
description = "A Nom parser library for hyperlinks with markup."
categories = ["parser-implementations"]

[dependencies]
nom= "7.1.3"
html-escape = "0.2.13"
percent-encoding = "2.3.1"
thiserror = "2.0.12"
